# after-death-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REVIEW.md  SECURITY.md  docker-compose.yml  railway.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  cli_backup.py  cli_ingest.py  db.py  main.py  prod.py
backend/app/agents/: __init__.py  llm.py  tools.py
backend/app/api/: __init__.py  admin_tax.py  agent_drafts.py  approvals.py  assets.py  audit_activity.py  beneficiaries.py  contacts.py  costs.py  creditor_notices.py  creditors.py  debtors.py  decisions.py  digital.py  documents.py  estate.py  exports.py  health.py  iht.py  knowledge.py  (+10 more)
backend/migrations/: README  env.py  script.py.mako
backend/seed_templates/: demo_estate_seed.json  section25_checklist.json  source_registry.json  veteran_checklist.json
backend/tests/: conftest.py  test_agent_guardrails.py  test_agents.py  test_api_beneficiaries_decisions.py  test_api_contacts.py  test_api_costs.py  test_api_creditor_notices.py  test_api_documents.py  test_api_estate.py  test_api_iht.py  test_api_knowledge.py  test_api_notifications_audit.py  test_api_process.py  test_api_registers.py  test_api_tasks.py  test_api_tracing.py  test_api_trackers.py  test_cf_access.py  test_deadlines.py  test_estate_accounts.py  test_exports.py  test_hardening.py  test_iht_engine.py  test_ingest.py  test_knowledge_chat.py  test_params.py  test_process_task_sync.py  test_reevaluation.py  test_seeding.py  test_veteran.py
(+233 files in other folders)
